# nutri-ia-th_cycy

./: .gitignore  EMBEDDING_EVALUATION.md  EMBEDDING_MODEL.md  README.md  main.py  pyproject.toml
docs/: GUIDE_COMPLET.md
src/config/: settings.py
src/evaluate/: __init__.py  embedding_eval.py
src/process/: embed_images.py  embedding_model.py  prepare_images.py
src/utils/: image_utils.py
tests/: test_embedding_model.py
