[project]
name = "nutri-ia-data-collection"
version = "0.1.0"
description = "Collecte, traitement et embedding d'images pour l'Assistant IA de Nutrition"
requires-python = ">=3.10"
dependencies = [
    "torch==2.3.1",
    "torchvision==0.18.1",
    "timm==1.0.7",
    "Pillow==10.4.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "tqdm==4.66.4",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "loguru==0.7.2",
    "h5py==3.11.0",
    "matplotlib==3.9.1",
    "umap-learn==0.5.6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "ruff==0.5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
